<resources>
    <string name="app_name">gbnltask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">Start Date:</string>
    <string name="club_details">Club Details</string>
    <string name="founded">Founded</string>
    <string name="nickname">NickName</string>
    <string name="address">Address</string>
    <string name="phonenumber">PhoneNumber:</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="club_colors">Club colors</string>
    <string name="players">Team Players</string>
</resources>